kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/bar"
        backend:
          serviceName: kube-bar-svc
          servicePort: 80
      - path: "/foo"
        backend:
          serviceName: kube-foo-svc
          servicePort: 80
